{
    "name": "InputMap",
    "maps": [
        {
            "name": "Player",
            "id": "21ab9673-8a4d-4111-96c3-d57db362d710",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "ffac5096-d912-4459-83a6-4937730e01f3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Push",
                    "type": "Button",
                    "id": "7ce0cf85-b147-4f6b-bc44-47e3f409a17a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Vocal",
                    "type": "Value",
                    "id": "c64dd425-1a79-4e83-bb78-6dc89c21fca1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "MoveVector",
                    "id": "6be09ad4-f25d-437a-9a0d-a6fd00ec1d64",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "48d85905-1dde-4687-8c74-99896d116683",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "7effcc6f-589a-420b-a1e9-a0792f08b81c",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "3a88f804-0b06-4d7e-9135-682cafe3781e",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "49a17079-cd93-4e1c-a2b4-8d7877c71e19",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "MoveVector",
                    "id": "32e39334-5ee8-4777-afca-6b62eb3fc9b9",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "afa8bd6f-b40c-4667-b854-82f6401d59a9",
                    "path": "<XInputController>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xbox Controller",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "789ee56a-9ac4-4976-9434-3f18df45ba6c",
                    "path": "<XInputController>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xbox Controller",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "8fc84f4d-455e-4dc5-a033-56d64da43603",
                    "path": "<XInputController>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xbox Controller",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "bd71e0be-37fe-41ea-9073-e3fdeea91d7e",
                    "path": "<XInputController>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xbox Controller",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "MoveVector",
                    "id": "9bce1079-ea3e-41fd-89ac-f7c00af2156a",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "b32fa7e1-c83b-4422-bebb-ac0380cafe8b",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "PS4 Controller",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "fa19dbac-9e30-443a-8089-5ee9e0160e1f",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "PS4 Controller",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "8afa0b0d-2d9d-40ef-96f9-970a25e28b8b",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "PS4 Controller",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "0b7eb2dd-4fb1-4280-bc59-527dc9379d79",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "PS4 Controller",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "71e6d064-a752-4aa5-8cb7-da1f5540f39f",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "PS4 Controller",
                    "action": "Push",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0a885cc6-2d84-4001-b40d-26eb9dc5bb4e",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Push",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8ff054e1-97ee-49e1-ae3f-84fa52db8fed",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xbox Controller",
                    "action": "Push",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4a20abed-968c-42d4-8726-7a9ffcbfca24",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "Vocal",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5659962d-8a0b-4707-bd18-a3dd1e881572",
                    "path": "<DualShockGamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "PS4 Controller",
                    "action": "Vocal",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "30c6dafa-0fc8-4c63-b929-23a2bd5b1e4c",
                    "path": "<XInputController>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xbox Controller",
                    "action": "Vocal",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Menu",
            "id": "8eee53e5-76e3-4f52-af1a-effc57112752",
            "actions": [
                {
                    "name": "MoveButtonCursor",
                    "type": "Button",
                    "id": "f0dd8a38-3ae3-4361-b5a0-52996b7f7447",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TriggerButton",
                    "type": "Button",
                    "id": "80607391-3160-415a-9301-4edaed9b7b8f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "abd7deb4-e59a-4126-8588-86840e45e9f3",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveButtonCursor",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "8b31fc77-5d6d-41fa-9698-38692fadcae9",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "MoveButtonCursor",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "64294d0e-6de1-4855-a48d-361bf93f295c",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "MoveButtonCursor",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "3a73d9f3-f916-460a-ba1a-bfbb29c4dbe1",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveButtonCursor",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "868e13a7-e06c-45af-9bd8-d1bc211e2d27",
                    "path": "<DualShockGamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "PS4 Controller",
                    "action": "MoveButtonCursor",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "3511d19f-8e93-4a17-9071-869f76204014",
                    "path": "<DualShockGamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "PS4 Controller",
                    "action": "MoveButtonCursor",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "2b058e4f-a047-457b-9174-85429b428d6c",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveButtonCursor",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "114139dd-4b0d-41c6-9333-2e1966629c0e",
                    "path": "<XInputController>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xbox Controller",
                    "action": "MoveButtonCursor",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "05b9ccc5-e50d-4188-94b4-352b942a2407",
                    "path": "<XInputController>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xbox Controller",
                    "action": "MoveButtonCursor",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "604d4063-bc6c-405b-bb31-d16e4366f28b",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveButtonCursor",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "5dee4c0e-992b-4960-a98b-41df1b473ee0",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "MoveButtonCursor",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "c73767ab-a39d-47c5-bccb-bac721e18bea",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "MoveButtonCursor",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "f5907f49-a2ae-4602-aec6-062e0d5c6d8a",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "TriggerButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "53a1bc5c-d8b1-457d-bc9e-12d8e7ee5b9c",
                    "path": "<DualShockGamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "PS4 Controller",
                    "action": "TriggerButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "38b1d8d9-1b5f-46db-a0f6-89bfa3eba319",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xbox Controller",
                    "action": "TriggerButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "4e5003a1-b2e5-4d6a-ab3c-a2e55a409878",
            "actions": [
                {
                    "name": "MoveButtonCursor",
                    "type": "Value",
                    "id": "f8a56a07-c15a-49ec-92be-43b226a14e7f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TriggerButton",
                    "type": "Button",
                    "id": "62652442-7aec-4d8a-8214-1174631148f2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "faba5405-72cb-4406-941a-1b3babee732f",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveButtonCursor",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Up",
                    "id": "37ab4a94-b189-46fc-a33b-e2630dababd3",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "MoveButtonCursor",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Down",
                    "id": "80a73698-13e8-419d-99c2-16919a1f03e1",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "MoveButtonCursor",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Left",
                    "id": "74b9d8de-eda9-45f7-9602-5afe6f75e9b6",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveButtonCursor",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Right",
                    "id": "d351b4fa-83e0-4ff8-8cfb-f97c025893e7",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveButtonCursor",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "2D Vector",
                    "id": "2515e751-6a0b-4763-a200-8da2bb8b306b",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveButtonCursor",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Up",
                    "id": "e051d62a-66d0-41b2-8bde-aa4cf1f5b0b9",
                    "path": "<DualShockGamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "PS4 Controller",
                    "action": "MoveButtonCursor",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Down",
                    "id": "6be37b60-caaa-46ea-81ae-38dff4b85d6f",
                    "path": "<DualShockGamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "PS4 Controller",
                    "action": "MoveButtonCursor",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Left",
                    "id": "e325af53-2036-46f0-9a78-7b317747699f",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveButtonCursor",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Right",
                    "id": "f2ca3969-a4dd-4720-b3de-06c553d0b9e8",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveButtonCursor",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "2D Vector",
                    "id": "46ec6d18-b243-4d37-b07f-627e791984a1",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveButtonCursor",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Up",
                    "id": "eeb049df-30d1-4322-9f34-92172df7209c",
                    "path": "<XInputController>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xbox Controller",
                    "action": "MoveButtonCursor",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Down",
                    "id": "042b2f14-2b3b-48b8-80ea-baa54a2132c0",
                    "path": "<XInputController>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xbox Controller",
                    "action": "MoveButtonCursor",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Left",
                    "id": "268b0ae2-5c94-4958-81d6-9b638df5e0a6",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveButtonCursor",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Right",
                    "id": "44f4ddc2-b9ba-49de-848d-08f721b76796",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveButtonCursor",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "e117cdd2-79ab-4117-b0ee-e6f9a617dde1",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard & Mouse",
                    "action": "TriggerButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c19cdd82-b833-4c77-b8c5-b8249dcc4353",
                    "path": "<DualShockGamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "PS4 Controller",
                    "action": "TriggerButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "62d697cb-701e-484d-8643-e46d8d6b646b",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xbox Controller",
                    "action": "TriggerButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard & Mouse",
            "bindingGroup": "Keyboard & Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "PS4 Controller",
            "bindingGroup": "PS4 Controller",
            "devices": [
                {
                    "devicePath": "<DualShockGamepad>",
                    "isOptional": true,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Xbox Controller",
            "bindingGroup": "Xbox Controller",
            "devices": [
                {
                    "devicePath": "<XInputController>",
                    "isOptional": true,
                    "isOR": false
                }
            ]
        }
    ]
}